workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__snap_y_just_under.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(7.0, 7.0 - TOLERANCE_COORDINATE * 0.5), None)"
---
Location {
    key: (
        7,
        7,
    ),
    point: Point(
        7.0,
        6.9995,
    ),
    distance: 9.899141389534751,
    radians: 2.35615877463109,
}
