workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__top.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(1.0, Point(0.0, -7.5), None)"
---
Location {
    key: (
        0,
        -8,
    ),
    point: Point(
        0.0,
        -7.5,
    ),
    distance: 7.5,
    radians: 0.0,
}
