workspaces/spatial-grid-map/src-rust/snapshots/hogg_spatial_grid_map__location__tests__top_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(0.0, -8.1), None)"
---
Location {
    key: (
        0,
        -8,
    ),
    point: Point(
        0.0,
        -8.1,
    ),
    contained: false,
    distance: 8.1,
    radians: 0.0,
}
